	Updated OS X MPlayer to include fontconfig support
	Updated Bulgarian translation (thanks, JORDITO!)
	Updated German translation (thanks, smo!)
	Updated Dutch translation
	Added full featured IP filter with support for wildcards and ranges
	Improved network interface choosing algorithm now skips virtual interfaces
	Updated libraries (configuration, jgoodies and slf4j)

2011-09-22 - 1.40.0

	Backwards-incompatible API changes (for plugin developers/packagers) - see http://tinyurl.com/3wspwn8 for more details
	Updated OS X MPlayer to enable external VOBsub, ASS/SSA and Fribidi support
	Allow update checks to be performed manually (Windows only)
	Allow automatic update checks to be enabled (Windows only)
	Simplify PMS customization for packagers of custom builds
	Logging fix for headless configurations
	Added experimental support for iPad / iPhone renderers
	Fixed DVD ISO playback on OS X (thanks, jjmojojjmojo!)
	Added support for the AirPlayer app
	Added support for Samsung TV model SEC_HHP_TV (thanks, coax-!)
	Added Aperture support on OS X (thanks, coax-!)
	Added thumbnail support for images (some code from http://www.rayinblu.com/ps3mediaserver)
	The cache is now reset after each upgrade/downgrade (for versions higher than 1.40.0)
	Files with the extension *.vdr are now recognized as MPG videos
	Added support for JPEG Multi-Picture Format (.mpo) files
	Added support for chunking renderers like Sony Bluray (thanks, infidel, WorldOfHurt and patters!)
	Updated Italian translation (thanks, nocciola82!)
	Fixed bug that would often limit streaming buffer to 50 MB.
	Updated FFmpeg for Windows to r30656 from r30172
	Updated French translation (thanks, danielha!)
	Updated Russian translation (thanks, Tianuchka!)
	Added support for regular ASS/SSA subtitles (before we only supported the more popular "advanced" kind)
	Updated MediaInfo to 0.7.47 from 0.7.44
	Updated JRE autodownload to 6u27 from 6u26
	Removed IP/hostname from Status tab (still shown in Traces)